@@ -1,5 +1,11 @@
 2006-04-14  Ross Burton  <ross@burtonini.com>
 
+	* sc/sj-play,c:
+	Fix reversed check for invalid iterator. Fixes "Play doesn't work"
+	and "only plays track 1" (#338144).
+
+2006-04-14  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-play.c:
 	Add some buffering (#336319).
 
